@@ -187,10 +187,14 @@ int network_write_chunkqueue_openssl(server *srv, connection *con, SSL *ssl, chu
 				}
 
 
-				lseek(ifd, offset, SEEK_SET);
-				if (-1 == (toSend = read(ifd, local_send_buffer, toSend))) {
+				if (-1 == lseek(ifd, offset, SEEK_SET)) {
+					log_error_write(srv, __FILE__, __LINE__, "ss", "lseek failed:", strerror(errno));
 					close(ifd);
+					return -1;
+				}
+				if (-1 == (toSend = read(ifd, local_send_buffer, toSend))) {
 					log_error_write(srv, __FILE__, __LINE__, "ss", "read failed:", strerror(errno));
+					close(ifd);
 					return -1;
 				}
 
