@@ -147,11 +147,14 @@ int network_write_chunkqueue_write(server *srv, connection *con, int fd, chunkqu
 #else /* USE_MMAP */
 			buffer_prepare_copy(srv->tmp_buf, toSend);
 
-			lseek(ifd, offset, SEEK_SET);
+			if (-1 == lseek(ifd, offset, SEEK_SET)) {
+				log_error_write(srv, __FILE__, __LINE__, "ss", "lseek: ", strerror(errno));
+				close(ifd);
+				return -1;
+			}
 			if (-1 == (toSend = read(ifd, srv->tmp_buf->ptr, toSend))) {
 				log_error_write(srv, __FILE__, __LINE__, "ss", "read: ", strerror(errno));
 				close(ifd);
-
 				return -1;
 			}
 			close(ifd);
