@@ -17,6 +17,7 @@ NEWS
   * add force_assert() to enforce assertions as simple assert()s are disabled by -DNDEBUG (fixes #2546)
   * [mod_cml_lua] fix null pointer dereference
   * force assertion: setting FD_CLOEXEC must work (if available)
+  * [network] check return value of lseek()
 
 - 1.4.34
   * [mod_auth] explicitly link ssl for SHA1 (fixes #2517)
